--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 :root[data-theme="light"] {
   --text: #070807;
   --background: #f8f9f8;
-  --backgroundemphasis: #b3b3b3;
+  --backgroundemphasis: #dfdede;
   --primary: #719a74;
   --secondary: #a6c5a9;
   --accent: #83b688;
